syntax = "proto3";
option java_package = "com.thalesgroup.grpctest";

service FiletTransfer {
    rpc fullUplaod (FileChunckRequest) returns (FileChunckResponse) {}
    rpc streamUpload (stream FileChunckRequest) returns (FileChunckResponse) {}
 }
 message FileChunckRequest {
    bytes data = 1;
    int32 size = 2;
    int32 offset =3;
    string filename =4;
 }
 message FileChunckResponse {
    bool complete = 1;
 } 